# web-common

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
crates/client/: Cargo.toml
crates/client/src/http_client/: client.rs  error.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/src/: health_check.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  server.rs
crates/response/: Cargo.toml
crates/response/src/: response.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  server.rs
devshell/: default.nix
