[package]
name                   = "web-client"
description            = "Web Client"
version.workspace      = true
authors.workspace      = true
homepage.workspace     = true
readme.workspace       = true
repository.workspace   = true
license.workspace      = true
edition.workspace      = true
rust-version.workspace = true
categories.workspace   = true
keywords.workspace     = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

http    = { workspace = true }
reqwest = { workspace = true }

thiserror = { workspace = true }
anyhow    = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio    = { workspace = true }

[lints]
workspace = true
